# finance-tracker

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  safe_setup_project.sh
alembic/: env.py
app/: config.py  main.py
app/api/: auth.py  router.py
app/api/v1/: accounts.py
app/database/: connection.py
app/models/: __init__.py  account.py  base.py  category.py  transaction.py  user.py
app/repositories/: base_repository.py
app/schemas/: __init__.py  account.py  category.py  common.py  transaction.py  user.py
app/services/: auth_services.py  user_service.py
finance-tracker/: .env.example  .gitignore  pyproject.toml
finance-tracker/app/: config.py  main.py
finance-tracker/app/api/: router.py
finance-tracker/scripts/: dev.py  format.py
scripts/: dev.py
tests/: conftest.py  test_main.py
